# motifgpt

./: .gitignore  Makefile.am  README  autogen.sh  buffer_utils.c  buffer_utils.h  chat_logic.c  chat_logic.h  config.c  config_store.c  config_store.h  config_utils.c  config_utils.h  configure.ac  configure~  conversation.json  disasterparty_impl.c  history.c  history.h  motifgpt.c  motifgpt_chat.c  motifgpt_chat.h  motifgpt_config.c  motifgpt_config.h  motifgpt_history.c  motifgpt_history.h  motifgpt_plugin.h  motifgpt_types.h  notepad-debug.txt  stream_handler.c  stream_handler.h  test_history  test_utils  utils.c  utils.h
.deps/: motifgpt-motifgpt.Po  utils.Po
plugins/: plugin_filereader.c  plugin_stock.c  plugin_weather.c
tests/: Makefile.am  benchmark_conversation.c  benchmark_image_load.c  benchmark_render.c  benchmark_tools.c  disasterparty.h  disasterparty_mock.c  mock_disasterparty.c  test_base64.c  test_buffer_utils.c  test_config.c  test_config_store.c  test_config_utils.c  test_fix_logic.c  test_history.c  test_history_truncation.c  test_image_validation.c  test_save_settings.c  test_settings  test_settings.c  test_settings_helper.c  test_stream_handler.c  test_utils.c
tests/.deps/: libdisasterparty_a-disasterparty_mock.Po  test_settings-test_settings.Po  test_utils.Po
tests/include/: disasterparty.h
tests/pkgconfig/: libdisasterparty.pc
